# desktop-persian-calendar

./: LICENSE  meson.build  source.cc
